collapse navbar text to center and padding fixes

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ a.resume:hover{
     text-decoration-line: none;
 }
 
+.welcome {
+    padding-bottom: 70px;
+}
+
 .navbar {
     margin-bottom: 0;
     border-radius: 0;
